[package]
name = "sqlite-brotli"
version = "0.1.0"
authors = [ "Ossi Herrala <oherrala@iki.fi>" ]
license = "MIT"
edition = "2021"

description = "Brotli compress and decompress functions for SQLite"
homepage = "https://github.com/sensorfu/sqlite-brotli#readme"
repository = "https://github.com/sensorfu/sqlite-brotli"
readme = "README.md"

[dependencies]
brotli = "3"
rusqlite = { version = "0.28", features = [ "functions" ] }

[dev-dependencies]
quickcheck = "1"
