[package]
name = "sqlite-deflate"
version = "0.1.0"
authors = [ "Ossi Herrala <oherrala@iki.fi>" ]
license = "MIT"
edition = "2021"

description = "DEFLATE compress and decompress functions for SQLite"
homepage = "https://github.com/sensorfu/sqlite-deflate#readme"
repository = "https://github.com/sensorfu/sqlite-deflate"
readme = "README.md"

[dependencies]
rusqlite = { version = "0.28", features = [ "functions" ] }
miniz_oxide = { version = "0.7", features = [ "simd" ] }

[dev-dependencies]
quickcheck = "1"
